[#IC 278] Handler HTTP (#30)
